# Simulacrum

./: CMakeLists.txt  README.md  setup.bat  setup.sh
include/OpenGL/: EBO.hpp  FBO.hpp  UBO.hpp  VAO.hpp  VBO.hpp  camera.hpp  shader.hpp  texture.hpp
include/core/: config.hpp  debug.hpp  globals.hpp  renderDefinitions.hpp  simObjectList.hpp  state.hpp  types.hpp
include/objects/: lightObject.hpp  model.hpp  object.hpp  physicsObject.hpp  simObject.hpp
include/utils/: 3DModelImport.hpp  FormatConsole.hpp  Timer.hpp  color.hpp  customMath.hpp  model.hpp  paths.hpp  physicsThread.hpp  scenes.hpp  simpleToml.hpp  stlImport.hpp  units.hpp  updateRunningConfig.hpp
res/: objects.json  scenes.json  settings.conf  settings.json
res/models/: pyramid.stl  sphere-ring.stl  sphere.stl
setup/: setup.bat
shaders/: default.frag  default.vert  fragment.default.glsl  light.frag.glsl  planet.frag  planet.vert  postProcess.frag  postProcess.vert  star.frag  star.vert  vertex.default.glsl
src/: gui.cpp  input.cpp  main.cpp  physics.cpp  render.cpp  settings.cpp  simulation.cpp
src/TEMP/: dummyObject.hpp
src/setup/: renderSetup.cpp  simSetup.cpp
